Fix conversation list scrolling on mobile

--- a/client/src/components/ChatBar.css
+++ b/client/src/components/ChatBar.css
@@ -1,6 +1,19 @@
 .chat-bar.sticky-top {
-  height: calc(100vh - 80px);
   top: 80px;
+}
+
+@media (max-device-width: 768px) {
+  .chat-bar.sticky-top {
+    height: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+@media (min-device-width: 768px) {
+  .chat-bar.sticky-top {
+    height: calc(100vh - 80px);
+  }
 }
 
 .chat-conversations {
